drkns 06.11.2018 20:35:22 +0000 - build 5304

1. Переделана работа с SQLite: теперь при неудаче вместо возврата false или кодов ошибок (которые мы почти нигде не проверяли)
   бросаются исключения. Они пока что перехватываются при открытии db (из-за всего сопутствующего этому процессу шаманства)
   и создании экземпляра настроек плагина (по понятным причинам), т.е. SCTL_CREATE, как и обещано, вернет FALSE в случае неудачи.
   Это должно заодно починить 0002940: SCTL_CREATE: проблемы при создании более одного экземпляра настроек.
   В остальном коде эти возможные исключения (пока) никак не обрабатываются, так что если у вас что пойдет не так - вы об этом узнаете.
   SQLITE_BUSY обрабатывается отдельно - после 5-секундного таймаута будет возможность повторить либо прервать операцию.

   Иными словами - изменения весьма экспериментальные, возможно всякое.

MZK 05.11.2018 22:34:40 -0800

1. Перевёл страницу @OSCommands справки на английский и переработал русскую страницу.

drkns 05.11.2018 18:44:11 +0000 - build 5303

1. Уточнение 5281.2.

drkns 30.10.2018 22:03:16 +0000 - build 5302

1. GH #74 Problem with relative paths in arguments if running from directory with full path longer than MAX_PATH chars
   Попробуем передавать в SHELLEXECUTEINFO.lpDirectory короткое имя, если длинное длиннее MAX_PATH.

drkns 29.10.2018 19:17:34 +0000 - build 5301

1. С форума: Shift+BS не сбрасывает фильтр.

drkns 28.10.2018 14:00:50 +0000 - build 5300

1. Сократим время жизни транзакций в HierarchicalConfigDb для внутренних баз.
   Для плагинов пока всё по прежнему.

drkns 27.10.2018 17:44:42 +0100 - build 5299

1. С форума: При попытке переименовать файл или каталог с именем 1.1.1 в *.*.2 FAR падает.

drkns 26.10.2018 23:27:41 +0100 - build 5298

1. И ещё раз.

drkns 26.10.2018 23:09:45 +0100 - build 5297

1. Уточнение 5281.2.

drkns 26.10.2018 19:48:27 +0100 - build 5296

1. С форума: Visual issue with moving items between groups in Files highlighting
