@@ -45,7 +45,10 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #define SQLITE_OMIT_COMPILEOPTION_DIAGS 1
 #define SQLITE_OMIT_DECLTYPE 1
 #define SQLITE_OMIT_DEPRECATED 1
+#ifdef _DEBUG
+// breaks debug build on x86
 #define SQLITE_OMIT_EXPLAIN 1
+#endif
 #define SQLITE_OMIT_PROGRESS_CALLBACK 1
 #define SQLITE_OMIT_TRACE 1
 
