@@ -1,3 +1,9 @@
+drkns 08.11.2018 00:26:26 +0000 - build 5305
+
+1. Уточнения обработки исключений.
+
+2. Повторные вызовы SCTL_CREATESUBKEY могли приводить к лишним выделениям памяти.
+
 drkns 06.11.2018 20:35:22 +0000 - build 5304
 
 1. Переделана работа с SQLite: теперь при неудаче вместо возврата false или кодов ошибок (которые мы почти нигде не проверяли)
